--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 	p {
 		color: blue;
 		font-size: 100px;
-		margin-left: 700px;
-		margin-top: 50px;
+		font-family: Arial; 
+		font-weight: bold;
+		text-align: center;
 	}
 </style>
 
