--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
-<style>
-	p {
-		color: blue;
-		font-size: 100px;
-		font-family: Arial; 
-		font-weight: bold;
-		text-align: center;
-	}
-</style>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Food Blog
+        </title>
 
+        <style>
+            .mainpic {
+                display: block;
+                object-fit: cover;
+                object-position: center;
+                margin-left: -10px;
+                margin-top: -10px;
+                width: 1922px;
+                height: 600px;
+                filter: brightness(70%);
+            }
 
-<p>
-	FOOD BLOG
-</p>
+            .food-blog-title {
+                position: relative;
+                top: -450px;
+                text-align: center;
+                color: white;
+                font-size: 100px;
+                font-family: Arial; 
+                font-weight: bold;
+                text-shadow: 10px 10px 20px black;
+            }
+
+        </style>
+    </head>
+
+    <body>  
+        <img class="mainpic" src="mainpic.png">
+        <p class="food-blog-title">Food Blog</p>
+    </body>
+
+</html>
